@@ -1,6 +1,6 @@
 //  Gant -- A Groovy build framework based on scripting Ant tasks.
 //
-//  Copyright © 2006-7 Russel Winder
+//  Copyright © 2006-8 Russel Winder
 //
 //  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 //  compliance with the License. You may obtain a copy of the License at
@@ -21,7 +21,44 @@ package org.codehaus.gant
  */
 abstract class AbstractInclude {
   protected binding
-  protected AbstractInclude ( binding ) { this.binding = binding }
+  protected loadedClasses = [ ]
+  protected pendingClass = null
+  protected AbstractInclude ( Binding binding ) { this.binding = binding }
+  public leftShift ( Class theClass ) {
+    def className = theClass.name
+
+    System.err.println ( 'Loading ' + className + ' for object of type ' + this.class )
+
+    if ( ! ( className in loadedClasses ) ) {
+      def index = className.lastIndexOf ( '.' ) + 1
+      binding.setVariable ( className[index..-1] , createInstance ( theClass ) )
+      loadedClasses << className
+    }
+    this
+  }
+  public abstract leftShift ( File file )
+  public abstract leftShift ( String s )
+  public leftShift ( List l ) { l.each { item -> this << item } ; this }
+  public leftShift ( Object o ) {
+    throw new RuntimeException ( 'Ignoring include of type ' + o.class.name )
+    this
+  }
+  public power ( Class theClass ) {
+    pendingClass = theClass
+    this
+  }
+  public multiply ( Map keywordParameters ) {
+    if ( pendingClass != null ) {
+      def className = pendingClass.name
+      if ( ! ( className in loadedClasses ) ) {
+        def index = className.lastIndexOf ( '.' ) + 1
+        binding.setVariable ( className[index..-1] , createInstance ( pendingClass , keywordParameters ) )
+        loadedClasses << className
+      }
+      pendingClass = null
+    }
+    this
+  }
   protected createInstance ( Class theClass ) {
     try { return theClass.getConstructor ( Binding ).newInstance ( [ binding ] as Object[] ) }
     catch ( NoSuchMethodException nsme ) { throw new RuntimeException ( 'Could not initialize ' + theClass.name , nsme ) }
