@@ -1,6 +1,6 @@
 //  Gant -- A Groovy build framework based on scripting Ant tasks.
 //
-//  Copyright © 2006-7 Russel Winder
+//  Copyright © 2006-8 Russel Winder
 //
 //  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
 //  compliance with the License. You may obtain a copy of the License at
@@ -22,18 +22,7 @@ package org.codehaus.gant
  *  @author Graeme Rocher <graeme.rocher@gmail.com>        
  */
 class IncludeTargets extends AbstractInclude {
-  def loadedClasses = [ ]
-  def pendingClass = null
-  IncludeTargets ( binding ) { super ( binding ) }
-  def leftShift ( Class theClass ) {
-    def className = theClass.name
-    if ( ! ( className in loadedClasses ) ) {
-      def index = className.lastIndexOf ( '.' ) + 1
-      binding.setVariable ( className[index..-1] , createInstance ( theClass ) )
-      loadedClasses << className
-    }
-    this
-  }
+  IncludeTargets ( Binding binding ) { super ( binding ) }
   def leftShift ( File file ) { 
     def className = file.name
     if ( ! ( className in loadedClasses ) ) {
@@ -47,25 +36,4 @@ class IncludeTargets extends AbstractInclude {
     this 		
   }
   def leftShift ( String s ) { binding.groovyShell.evaluate ( s ) ; this }
-  def leftShift ( List l ) { l.each { item -> this << item } ; this }
-  def leftShift ( Object o ) {
-    throw new RuntimeException ( 'Ignoring includeTargets of type ' + o.class.name )
-    this
-  }
-  def power ( Class theClass ) {
-    pendingClass = theClass
-    this
-  }  
-  def multiply ( Map keywordParameters ) {
-    if ( pendingClass != null ) {
-      def className = pendingClass.name
-      if ( ! ( className in loadedClasses ) ) {
-        def index = className.lastIndexOf ( '.' ) + 1
-        binding.setVariable ( className[index..-1] , createInstance ( pendingClass , keywordParameters ) )
-        loadedClasses << className
-      }
-      pendingClass = null
-    }
-    this
-  }
 }
